@@ -4,15 +4,17 @@ Hash: SHA256
 DIST selenium-webdriver-2.45.0.gem 2918912 SHA256 907efd8f8605fe5947ca21c58e13e939f59c9d3afafd8f18b563ec669308d4cc SHA512 dfde3601fb34f343b91ebe5f7e077b0430d022ec9f6da326096d1e45622ce00ffab10e3daf91b1ebeb57d5b960dcabdcc44bf46f55efcf667bc99f2c86b70aa0 WHIRLPOOL 234e5709e2d04942625ab62d3dcde12302a4d54d72d02e0dda3ffca5d005d1ca82875d287e435d59d32510c44a307c5cdd4150382e7be5c973667e11920e1814
 DIST selenium-webdriver-2.46.2.gem 2919424 SHA256 cb6575396f62f86f015c4905970d48da546c59109ed0aa318af061468d19a85c SHA512 b19bd428090381a12b577d82678ea8dfd2eec64c41e7c070c066ad8e9f106c3821a476038132f49862e1e01a5e940fa4e7a15f3655493753303dcedcccc55943 WHIRLPOOL e2413479641c6a4e687a824016af023f76286a0b89af3733e421d103d38e4dd73c8fcbc30b72135699c178060bfa2978ad15941864715c90f5a65311ae10b016
 DIST selenium-webdriver-2.47.0.gem 2871808 SHA256 78dd73ab91fbaec770aec43e2366f8c8afeb4536367f8fd06de665fae722d09b SHA512 386f6485e346e570588fe533f8a2dd6927268fa5a438fd2fac6ec8ac064ba8f4b43a085acccbe8a94ed09c2bed52e0b799ea5eb7fb080d4a139dd5622a46e301 WHIRLPOOL b05364e972821eac7bc4bc498508457b6343e2a666f33420faf058b920a74c33c6d0cbe6d1b620ca1c4a2d77de05a7f59bbb77c2ec0498b02b9ed4f3edfcb1de
+DIST selenium-webdriver-2.47.1.gem 2872832 SHA256 0140306e064fc40eb2dc632a88fd47dabe786ec2b29f7c59ee425d58113f7b86 SHA512 2973983dfca3ae1c97f55edc9db9480a7595676439c57ae58ec8af18ae6c5e210e2a2efcab630036079c4fed0513ce2e961b36dec3501b41e787a92ebf8cca98 WHIRLPOOL 137327e3066f9cdd52fc41ef1a36ee7a1ebb669b0a5dcbb9aafe7f49d180d2b41850b60089592b2ae9db8c9127764db2108543a173853b1ba4edf16131e8858c
 EBUILD selenium-webdriver-2.45.0.ebuild 1299 SHA256 b66f27f7fefc7c1119187df1dd98a3cf1f10736d7950d63078abf5c592f1727e SHA512 9233eb0702550b9d189388210baadfc434276bde3e5c962492c6ccb535ab222496c3c37e18b9b6e06385f629e764a911e8e49229e6071f1606d55d5380ffe569 WHIRLPOOL 1cac729a54e993dc0c2a8ad0f0bd00e8549ce4370e2efeab1ea23dc1a884ad3dcf25f2996062382eb379c2e25b6dca4fa48895338005fe2a23afb0d34d6aa6dd
 EBUILD selenium-webdriver-2.46.2.ebuild 1307 SHA256 62e0032bee0ed46a451b40fcaa37e13b1d5af32f2089d834ef50acaa8b8a236a SHA512 a3557b06ba6a9a2a6cc4cc119a92048f6f42068f52ae5ecce684a355246dede862cd94bded233770c4ca0cc441051ef6c3017cc97153847c79a549d1a2b85be2 WHIRLPOOL 263684f39c978df37eff3a61537e2f48243996a7fece4168a28b190d8f440b80da96ccddd0ecaf9ebb4f39d1c53fc21769eedabc0f6137d05c1b900f0a6eec96
 EBUILD selenium-webdriver-2.47.0.ebuild 1307 SHA256 799310a1799d6b441cf0088d09a3794235447aa2a97fa8497f189720a1a1ba85 SHA512 e088bea0ebfdacad68cd814b1d8e57baaf2ea107df1828e72242287771543375a03656c9547a01b01b820abc87815e72390992c8344b63f6e8ff329eea9562d1 WHIRLPOOL 4b2af2818c9f1fb803044c7ef29de23b7837d6c979a8c5c1588cf29488ce30b564443e41015656751c1ee42676d5bd043844eaa0fbed359a4e753f739cead331
-MISC ChangeLog 10800 SHA256 2c97f63e6250d9dd7c4e168781a3eb93d7781876e7db107c81d3f856e358bfb7 SHA512 82d175a408d64c8e21f1601b1747d2426f7b9e26c9a107720252753421b8ac5acf9a4705da2d060f09b154c844218f60421e5a3ce96d0f36b89edd21e10d6582 WHIRLPOOL 4e5f73b08246799bb2e7aa3fddbadfa01c98eee169fd5be948168f72685b01d79673f73717d7f53fd31d088290cd820bdeb1143fae1e2d3c0483d1d537b3cb61
+EBUILD selenium-webdriver-2.47.1.ebuild 1307 SHA256 0e4f12dc5b3dbfbfe48d79e489eaebccc000ef3eeb46858e247c24a5520b5814 SHA512 b9223e2e58884c8a67e2a03a2c313d5fd9946928ca5ba2d7759c8dbbdd998614b036d1bf9263a16a9aad1cd5266a3bd286d7176cda17d859521a978e0060ae1f WHIRLPOOL 4aff17968fee4c32b8f7f633a48020cd43f95aef4dacda9a786b3b32dcbf63a7aea4326f81eeaa19b8579dcf692af56e93ceecbbcb1740af7093cbca9ce11773
+MISC ChangeLog 10946 SHA256 b77296b6ad9c105acb28317a98273210b5e8272991bc61a34aae3067fcba34f4 SHA512 6151f92e4abdb06c3c958b4bf6572755232cddad50f35e67dde188427f41350bcb8165aab1207358cb85026af14a82f66fa686e14733910d385abc196738ef52 WHIRLPOOL 798071deaf66b9c54649789a924e76622f9369f75bac313592bb4083bbd29f0414c9970b20c6808636c3e31c44a3c1e06ca6e0dd74a9c26fa06b178b978837b8
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlW7BjkACgkQiIP6VqMIqNcgGQEAiu2Oei/barM7Kci4G5QnkEjM
-egsRUyTLhsa1NJYbrM4A/090DuX3NpjKuyHy2UaRiWjTjtb9B+tff5Uzicl62/Wm
-=/J4G
+iF4EAREIAAYFAlXENzgACgkQiIP6VqMIqNfXdQD9HfY4QWT6vQKuczwlABAfFtot
+Ef67pYWjqsEwNXR0pvAA/3/ifUwpYY6ReFs/aP7/ypjQqK4oaaAMq+2DH2IK3i73
+=/0Kp
 -----END PGP SIGNATURE-----
